--- a/main.css
+++ b/main.css
@@ -1652,7 +1652,7 @@
     transform: none;
   }
   .container-1eFtFS::after {
-    content: "I Love My GF";
+    content: "Stay comf";
     position: fixed;
     top: 220px;
     bottom: 85px;
