--- a/main.css
+++ b/main.css
@@ -1652,7 +1652,7 @@
     transform: none;
   }
   .container-1eFtFS::after {
-    content: "I love my GF";
+    content: "iluv mygf!";
     position: absolute;
     top: 220px;
     bottom: 85px;
